--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -1313,7 +1313,7 @@ StScrollBar {
   border-radius: 7px;
   padding: 4px 12px;
   color: black;
-  background-color: rgba(208, 0, 58, 0.75);
+  background-color: rgba(243, 243, 243, 0.65);
   text-align: center;
   -x-offset: 8px; }
 
